REL-2880: Fix build.sbt